--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     tools:context="com.androidskeleton.mvvm.ui.main.MainFragment">
 
     <TextView
-        android:id="@+id/lbl_greetings"
+        android:id="@+id/lblGreetings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
